--- a/3.html
+++ b/3.html
@@ -6,9 +6,9 @@
 <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no">
 <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Istok+Web:400,700&amp;subset=all">
 <title>3</title>
-<link rel="stylesheet" type="text/css" href="css/site.20181102231646.css">
+<link rel="stylesheet" type="text/css" href="css/site.20181102232835.css">
 <!--[if lte IE 7]>
-<link rel="stylesheet" type="text/css" href="css/site.20181102231646-lteIE7.css">
+<link rel="stylesheet" type="text/css" href="css/site.20181102232835-lteIE7.css">
 <![endif]-->
 </head>
 <body id="body">
@@ -75,7 +75,7 @@
 </picture>
 </div>
 <div class="vis-2 pos-14 size-14 cont-7">
-<a class="anchor" href="https://www.instagram.com/art_echohuang/" target="_blank" rel="noopener"><picture class="img-8"><source srcset="images/u-2260898377-2056122756-fm-26-gp-0-copy-41.png 1x" media="(max-width:479px)"><source srcset="images/u-2260898377-2056122756-fm-26-gp-0-copy-61.png 1x" media="(max-width:767px)"><source srcset="images/u-2260898377-2056122756-fm-26-gp-0-copy-97.png 1x" media="(max-width:959px)"><source srcset="images/u-2260898377-2056122756-fm-26-gp-0-copy-121.png 1x" media="(max-width:1199px)"><source srcset="images/u-2260898377-2056122756-fm-26-gp-0-copy-20.png 1x, images/u-2260898377-2056122756-fm-26-gp-0-copy-40.png 2x" media="(min-width:1200px)"><img src="images/u-2260898377-2056122756-fm-26-gp-0-copy-41.png" alt="" class="js-326 img-7"></picture></a>
+<a class="anchor" href="https://www.instagram.com/art_echohuang/" target="_blank" rel="noopener"><picture class="img-8"><source srcset="images/u-2260898377-2056122756-fm-26-gp-0-copy-41.png 1x" media="(max-width:479px)"><source srcset="images/u-2260898377-2056122756-fm-26-gp-0-copy-61.png 1x" media="(max-width:767px)"><source srcset="images/u-2260898377-2056122756-fm-26-gp-0-copy-97.png 1x" media="(max-width:959px)"><source srcset="images/u-2260898377-2056122756-fm-26-gp-0-copy-121.png 1x" media="(max-width:1199px)"><source srcset="images/u-2260898377-2056122756-fm-26-gp-0-copy-20-2.png 1x, images/u-2260898377-2056122756-fm-26-gp-0-copy-40-2.png 2x" media="(min-width:1200px)"><img src="images/u-2260898377-2056122756-fm-26-gp-0-copy-41.png" alt="" class="js-326 img-7"></picture></a>
 </div>
 </div>
 </div>
@@ -133,7 +133,7 @@
 <source srcset="images/rectangle-3-copy-9-98.png 1x, images/rectangle-3-copy-9-196.png 2x" media="(max-width:767px)">
 <source srcset="images/rectangle-3-copy-9-156.png 1x, images/rectangle-3-copy-9-312.png 2x" media="(max-width:959px)">
 <source srcset="images/rectangle-3-copy-9-195.png 1x, images/rectangle-3-copy-9-390.png 2x" media="(max-width:1199px)">
-<source srcset="images/rectangle-3-copy-9-249.png 1x, images/rectangle-3-copy-9-498.png 2x" media="(min-width:1200px)">
+<source srcset="images/rectangle-3-copy-9-249-2.png 1x, images/rectangle-3-copy-9-498-2.png 2x" media="(min-width:1200px)">
 <img src="images/rectangle-3-copy-9-65.png" alt="" class="js-331 img-17">
 </picture>
 </div>
@@ -155,7 +155,7 @@
 <source srcset="images/rectangle-3-copy-9-98.png 1x, images/rectangle-3-copy-9-196.png 2x" media="(max-width:767px)">
 <source srcset="images/rectangle-3-copy-9-156.png 1x, images/rectangle-3-copy-9-312.png 2x" media="(max-width:959px)">
 <source srcset="images/rectangle-3-copy-9-195.png 1x, images/rectangle-3-copy-9-390.png 2x" media="(max-width:1199px)">
-<source srcset="images/rectangle-3-copy-9-249.png 1x, images/rectangle-3-copy-9-498.png 2x" media="(min-width:1200px)">
+<source srcset="images/rectangle-3-copy-9-249-3.png 1x, images/rectangle-3-copy-9-498-3.png 2x" media="(min-width:1200px)">
 <img src="images/rectangle-3-copy-9-65.png" alt="" class="js-333 img-13">
 </picture>
 </div>
@@ -179,7 +179,7 @@
 <source srcset="images/rectangle-3-copy-9-98.png 1x, images/rectangle-3-copy-9-196.png 2x" media="(max-width:767px)">
 <source srcset="images/rectangle-3-copy-9-156.png 1x, images/rectangle-3-copy-9-312.png 2x" media="(max-width:959px)">
 <source srcset="images/rectangle-3-copy-9-195.png 1x, images/rectangle-3-copy-9-390.png 2x" media="(max-width:1199px)">
-<source srcset="images/rectangle-3-copy-9-249.png 1x, images/rectangle-3-copy-9-498.png 2x" media="(min-width:1200px)">
+<source srcset="images/rectangle-3-copy-9-249-4.png 1x, images/rectangle-3-copy-9-498-4.png 2x" media="(min-width:1200px)">
 <img src="images/rectangle-3-copy-9-65.png" alt="" class="js-335 img-13">
 </picture>
 </div>
@@ -201,7 +201,7 @@
 <source srcset="images/rectangle-3-copy-9-98.png 1x, images/rectangle-3-copy-9-196.png 2x" media="(max-width:767px)">
 <source srcset="images/rectangle-3-copy-9-156.png 1x, images/rectangle-3-copy-9-312.png 2x" media="(max-width:959px)">
 <source srcset="images/rectangle-3-copy-9-195.png 1x, images/rectangle-3-copy-9-390.png 2x" media="(max-width:1199px)">
-<source srcset="images/rectangle-3-copy-9-249.png 1x, images/rectangle-3-copy-9-498.png 2x" media="(min-width:1200px)">
+<source srcset="images/rectangle-3-copy-9-249-5.png 1x, images/rectangle-3-copy-9-498-5.png 2x" media="(min-width:1200px)">
 <img src="images/rectangle-3-copy-9-65.png" alt="" class="js-337 img-17">
 </picture>
 </div>
@@ -223,7 +223,7 @@
 <source srcset="images/rectangle-3-copy-9-98.png 1x, images/rectangle-3-copy-9-196.png 2x" media="(max-width:767px)">
 <source srcset="images/rectangle-3-copy-9-156.png 1x, images/rectangle-3-copy-9-312.png 2x" media="(max-width:959px)">
 <source srcset="images/rectangle-3-copy-9-195.png 1x, images/rectangle-3-copy-9-390.png 2x" media="(max-width:1199px)">
-<source srcset="images/rectangle-3-copy-9-249.png 1x, images/rectangle-3-copy-9-498.png 2x" media="(min-width:1200px)">
+<source srcset="images/rectangle-3-copy-9-249-6.png 1x, images/rectangle-3-copy-9-498-6.png 2x" media="(min-width:1200px)">
 <img src="images/rectangle-3-copy-9-65.png" alt="" class="js-339 img-13">
 </picture>
 </div>
@@ -247,7 +247,7 @@
 <source srcset="images/rectangle-3-copy-9-98.png 1x, images/rectangle-3-copy-9-196.png 2x" media="(max-width:767px)">
 <source srcset="images/rectangle-3-copy-9-156.png 1x, images/rectangle-3-copy-9-312.png 2x" media="(max-width:959px)">
 <source srcset="images/rectangle-3-copy-9-195.png 1x, images/rectangle-3-copy-9-390.png 2x" media="(max-width:1199px)">
-<source srcset="images/rectangle-3-copy-9-249.png 1x, images/rectangle-3-copy-9-498.png 2x" media="(min-width:1200px)">
+<source srcset="images/rectangle-3-copy-9-249-7.png 1x, images/rectangle-3-copy-9-498-7.png 2x" media="(min-width:1200px)">
 <img src="images/rectangle-3-copy-9-65.png" alt="" class="js-341 img-13">
 </picture>
 </div>
@@ -269,7 +269,7 @@
 <source srcset="images/rectangle-3-copy-9-98.png 1x, images/rectangle-3-copy-9-196.png 2x" media="(max-width:767px)">
 <source srcset="images/rectangle-3-copy-9-156.png 1x, images/rectangle-3-copy-9-312.png 2x" media="(max-width:959px)">
 <source srcset="images/rectangle-3-copy-9-195.png 1x, images/rectangle-3-copy-9-390.png 2x" media="(max-width:1199px)">
-<source srcset="images/rectangle-3-copy-9-249.png 1x, images/rectangle-3-copy-9-498.png 2x" media="(min-width:1200px)">
+<source srcset="images/rectangle-3-copy-9-249-8.png 1x, images/rectangle-3-copy-9-498-8.png 2x" media="(min-width:1200px)">
 <img src="images/rectangle-3-copy-9-65.png" alt="" class="js-343 img-17">
 </picture>
 </div>
@@ -291,7 +291,7 @@
 <source srcset="images/rectangle-3-copy-9-98.png 1x, images/rectangle-3-copy-9-196.png 2x" media="(max-width:767px)">
 <source srcset="images/rectangle-3-copy-9-156.png 1x, images/rectangle-3-copy-9-312.png 2x" media="(max-width:959px)">
 <source srcset="images/rectangle-3-copy-9-195.png 1x, images/rectangle-3-copy-9-390.png 2x" media="(max-width:1199px)">
-<source srcset="images/rectangle-3-copy-9-249.png 1x, images/rectangle-3-copy-9-498.png 2x" media="(min-width:1200px)">
+<source srcset="images/rectangle-3-copy-9-249-9.png 1x, images/rectangle-3-copy-9-498-9.png 2x" media="(min-width:1200px)">
 <img src="images/rectangle-3-copy-9-65.png" alt="" class="js-345 img-13">
 </picture>
 </div>
@@ -321,10 +321,10 @@
 <p class="para-2"><span class="font-3">2</span></p>
 </div>
 <div class="vis-3 pos-27 size-27 cont-21">
-<p class="para-2"><span class="font-4">3</span></p>
+<p class="para-2"><span class="font-4"><a href="4.html">3</a></span></p>
 </div>
 <div class="vis-3 pos-28 size-28 cont-42">
-<p class="para-2"><span class="font-4"><a href="#">Next</a></span></p>
+<p class="para-2"><span class="font-4"><a href="4.html">Next</a></span></p>
 </div>
 <div class="vis-3 pos-51 size-29 cont-18">
 <p class="para-2"><span class="font-4"><a href="4.html">Last</a></span></p>
@@ -391,7 +391,7 @@
 </div>
 <script type="text/javascript" src="js/jquery.js"></script>
 <script type="text/javascript" src="js/slick.js"></script>
-<script type="text/javascript" src="js/3.20181102231646.js"></script>
+<script type="text/javascript" src="js/3.20181102232835.js"></script>
 <script type="text/javascript">
 var ver=RegExp(/Mozilla\/5\.0 \(Linux; .; Android ([\d.]+)/).exec(navigator.userAgent);if(ver&&parseFloat(ver[1])<5){document.getElementsByTagName('body')[0].className+=' whitespacefix';}
 </script>
